1999-05-27  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (spacefiles): Clean up -c, top, and -b at end.
	(spacefiles, files): Fix bad references to CVSROOT_DIRNAME.

	Fix two problems pointed out by Olaf Kirch of swb.de/caldera.de:
	* server.c (outside_root): New function, contains expanded version
	of code from serve_directory.
	(serve_directory): Call outside_root.
	(outside_dir): New function
	(serve_modified, serve_is_modified, serve_notify,
	serve_questionable, serve_unchanged): Call outside_dir.
	* sanity.sh (server2): New tests, for these fixes.

1999-05-26  Jim Kingdon  <http://www.cyclic.com>

	* cvs.h, subr.c (xmalloc): Return void* not char*, like xrealloc
	has done for some time.
	* modules.c (do_module): If we find the module as a directory/file
	(rather than in the modules file), skip a bunch of processing
	which was unnecessary and also broken in most of the cases
	now tested for by the spacefiles sanity.sh test.
	* sanity.sh (spacefiles): New test, for specifying filenames
	(containing spaces, or starting with '-', or starting with '/') to
	"cvs co".

1999-05-25  Jim Kingdon  <http://www.cyclic.com>

	* client.c (update_entries): Make the old DONT_USE_PATCH code the
	only code.  This means that if people are still on CVS 1.9
	servers, then CVS will fall back to transferring entire files.
	This is better than looking for an external "patch" program which
	causes no end of troubles (especially on Windows, but someone just
	posted to info-cvs about a problem with the Solaris patch).  (This
	change was run by devel-cvs and feedback was positive).

	* subr.c (xmalloc, xrealloc): The new error.c does not support
	%lu; use sprintf instead.

1999-05-25 Derek Price
	<http://www-personal.engin.umich.edu/~oberon/resume.html>

	* sanity.sh (server): Escaped a few more newlines in
	another awk script.  Solaris awk still don't like 'em.

1999-05-25 Derek Price
	<http://www-personal.engin.umich.edu/~oberon/resume.html>
	and Jim Kingdon
